--- a/04_component/index.html
+++ b/04_component/index.html
@@ -44,10 +44,16 @@
     app.component('login-form',{
         template:`
             <form>
+                <h1>{{title}}</h1>
                 <input type="email"/>
                 <input type="password"/>
             </form>
-        `
+        `,
+        data(){
+            return {
+                title: "Login Form"
+            }
+        }
     })
     app.mount('#app')
 </script>
