add vue downloaded

--- a/02_directives/index.html
+++ b/02_directives/index.html
@@ -42,7 +42,7 @@
         <div v-else="isVisible3" class="box-3"></div>
     </div>
 </body>
-<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+<script src="../dist/vue.global.js"></script>
 
 <script>
     const app = Vue.createApp({
