--- a/03_event_emit/index.html
+++ b/03_event_emit/index.html
@@ -40,7 +40,7 @@
         <p>Count is: {{ count }}</p>
     </div>
 </body>
-<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+<script src="../dist/vue.global.js"></script>
 
 <script>
     const app = Vue.createApp({
