--- a/01_setup/index.html
+++ b/01_setup/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="app">{{ message }}</div>
 </body>
-<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+<script src="../dist/vue.global.js"></script>
 
 <script>
     const app = Vue.createApp({
