--- a/04_component/index.html
+++ b/04_component/index.html
@@ -37,7 +37,7 @@
         <login-form />
     </div>
 </body>
-<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+<script src="../dist/vue.global.js"></script>
 
 <script>
     const app = Vue.createApp({});
