--- a/05_props/index.html
+++ b/05_props/index.html
@@ -45,16 +45,19 @@
         template:`
             <form @submit.prevent="hadleSubmit">
                 <h1>{{title}}</h1>
-                <input type="email" v-model="email"/>
-                <input type="password" v-model="password"/>
+                <custom-input v-model="email" v-bind:label="emailLabel"/>
+                <custom-input v-model="password" :label="passwordLabel"/>
                 <button>Login</button>
             </form>
         `,
+        components:["custom-input"],
         data(){
             return {
                 title: "Login Form",
                 email: "",
-                password: ""
+                password: "",
+                emailLabel: "Email",
+                passwordLabel: "Password"
             }
         },
         methods:{
@@ -63,6 +66,16 @@
             }
         }
     })
+    app.component('custom-input',{
+        template: `
+        <label>
+            {{ label }}
+            <input type="text">
+        </label>
+        `,
+        props:["label"]
+    })
+
     app.mount('#app')
 </script>
 </html>
