--- a/07.01_export/index.html
+++ b/07.01_export/index.html
@@ -38,6 +38,6 @@
     </div>
 </body>
 <script src="../dist/vue.global.js"></script>
-<script type="module" src="./main.js"></script>
+<script src="./main.js"></script>
 
 </html>
