--- a/07.03_export/index.html
+++ b/07.03_export/index.html
@@ -14,6 +14,6 @@
     </div>
 </body>
 <script src="../dist/vue.global.js"></script>
-<script src="./main.js"></script>
+<script type="module" src="./main.js"></script>
 
 </html>
