--- a/09_router/index.html
+++ b/09_router/index.html
@@ -1,15 +1,23 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PSL - Leicon di Serenella Saccon</title>
 </head>
 <body>
-    <div id="#"></div>
+    <div id="app">
+        <hello></hello>
+        <div>{{user}}</div>
+        <button @click="incConta">incrementa</button>
+        <div>{{conta}}</div>
+        <p>
+            <router-link to="/">Go to Home</router-link>
+            <router-link to="/about">Go About</router-link>
+        </p>
+        <router-view></router-view>
+    </div>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="https://unpkg.com/vue-router@4"></script>
+    <!--<script src="https://unpkg.com/vue-router@4.0.15/dist/vue-router.global.js"></script> -->
+    <script type="module" src="js/main.js"></script>
 </body>
-<script src="../dist/vue.global.js"></script>
-<script src="../dist/vue-router.global.js"></script>
-<script type="module" src="../main.js"></script>
-</html>
+</html> 
