--- a/09_router/index.html
+++ b/09_router/index.html
@@ -5,19 +5,14 @@
 </head>
 <body>
     <div id="app">
-        <hello></hello>
-        <div>{{user}}</div>
-        <button @click="incConta">incrementa</button>
-        <div>{{conta}}</div>
         <p>
             <router-link to="/">Go to Home</router-link>
             <router-link to="/about">Go About</router-link>
         </p>
         <router-view></router-view>
     </div>
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="https://unpkg.com/vue-router@4"></script>
-    <!--<script src="https://unpkg.com/vue-router@4.0.15/dist/vue-router.global.js"></script> -->
-    <script type="module" src="js/main.js"></script>
+    <script src="../dist/vue.global.js"></script>
+    <script src="../dist/vue-router.global.js"></script>
+    <script type="module" src="./js/main.js"></script>
 </body>
-</html> 
+</html>
