--- a/09_router/index.html
+++ b/09_router/index.html
@@ -11,8 +11,8 @@
         </p>
         <router-view></router-view>
     </div>
-    <script src="../dist/vue.global.js"></script>
-    <script src="../dist/vue-router.global.js"></script>
+    <script src="./dist/vue.global.js"></script>
+    <script src="./dist/vue-router.global.js"></script>
     <script type="module" src="./js/main.js"></script>
 </body>
 </html>
